# NebulaStacker

./: .gitignore  CMakeLists.txt  NebulaStacker.kdev4  todo.txt
gil_extensions/boost/gil/extension/numeric/: algorithm.hpp
src/: CMakeLists.txt  Colors.hpp  FrameAverager.cpp  FrameAverager.hpp  FrameAveragerFactory.cpp  FrameAveragerFactory.hpp  FrameCombiner.hpp  FrameCombinerFactory.hpp  GilAlgorithm.hpp  ImageIO.cpp  ImageIO.hpp  ImageReader.hpp  ImageWriter.hpp  Images.hpp  MainWindow.cpp  MainWindow.hpp  NebulaStacker.cpp  NebulaStacker.hpp  NebulaStackerFactory.cpp  NebulaStackerFactory.hpp  Point.hpp  Strings.hpp  TiffImageReader.cpp  TiffImageReader.hpp  TiffImageWriter.cpp  TiffImageWriter.hpp  guiMain.cpp  guiMain.hpp  main.cpp  makeWithDependencies.hpp
src/Nebula/: Colors.hpp  FrameAverager.cpp  FrameAverager.hpp  FrameAveragerFactory.cpp  FrameAveragerFactory.hpp  FrameCombiner.hpp  FrameCombinerFactory.hpp  GilAlgorithm.hpp  ImageReader.hpp  ImageWriter.hpp  Images.hpp  MainWindow.cpp  NebulaStacker.cpp  NebulaStacker.hpp  NebulaStackerFactory.cpp  NebulaStackerFactory.hpp  Point.hpp  Stacker.cpp  Stacker.hpp  StackerFactory.cpp  StackerFactory.hpp  Strings.hpp  TiffImageReader.cpp  TiffImageReader.hpp  TiffImageWriter.cpp  TiffImageWriter.hpp  guiMain.cpp  guiMain.hpp  makeWithDependencies.hpp
src/Nebula/Gui/: MainWindow.cpp  MainWindow.hpp  QFileDialog.cpp  QFileDialog.hpp  guiMain.cpp  guiMain.hpp  toStrings.cpp  toStrings.hpp
test/: ApplicationFixture.cpp  ApplicationFixture.hpp  AutoremoveFiles.cpp  AutoremoveFiles.hpp  CMakeLists.txt  FrameAveragerTest.cpp  FrameCombinerFactoryMock.hpp  FrameCombinerMock.hpp  FrameFiles.cpp  FrameFiles.hpp  GilAlgorithmTest.cpp  ImageReaderMock.hpp  ImageWriterMock.hpp  MainWindowTest.cpp  NebulaStackerTest.cpp  NoiseFrameGenerator.cpp  NoiseFrameGenerator.hpp  NoiseFrameGeneratorTest.cpp  RawImagePrinter.hpp  StarImageGenerator.cpp  StarImageGenerator.hpp  StarImageGeneratorTest.cpp  main.cpp  stacking.cpp
test/Nebula/: ApplicationFixture.cpp  ApplicationFixture.hpp  FrameAveragerTest.cpp  FrameCombinerFactoryMock.hpp  FrameFiles.cpp  FrameFiles.hpp  ImageReaderMock.hpp  MainWindowTest.cpp  NebulaStackerTest.cpp  StarImageGenerator.cpp  StarImageGenerator.hpp  stacking.cpp
test/helpers/Nebula/: ApplicationFixture.hpp  AutoremoveFiles.cpp  AutoremoveFiles.hpp  CheckedPtr.hpp  FrameFiles.cpp  FrameFiles.hpp  NoiseFrameGenerator.cpp  NoiseFrameGenerator.hpp  StarImageGenerator.hpp  translatedFrames.cpp  translatedFrames.hpp
test/helpers/Nebula/Gui/: EnvironmentFixture.cpp  EnvironmentFixture.hpp  GuiApplicationFixture.cpp  GuiApplicationFixture.hpp  QFileDialogMock.cpp  QFileDialogMock.hpp
test/integration/: MainWindowTest.cpp
test/module/: stacking.cpp
test/unit/Nebula/: CheckedPtrTest.cpp  FrameCombinerFactoryMock.hpp  FrameCombinerMock.hpp  GilAlgorithmTest.cpp  ImageReaderMock.hpp  ImageWriterMock.hpp  NebulaStackerTest.cpp  NoiseFrameGeneratorTest.cpp  RawImagePrinter.hpp  StarImageGeneratorTest.cpp
